[tool.poetry]
name = "libre-hand-and-brain"
version = "0.1.0"
description = "Lichess bot for hand and brain chess"
authors = ["User"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-chess = "^1.999"
stockfish = "^3.28.0"
websocket-client = "^1.6.4"
python-dotenv = "^1.0.0"
ollama = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"